// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a blank banner wrapper 1`] = `
<BackgroundTile
  isDeceased={false}
>
  <SelectableTile
    onClick={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
  >
    <DemographicsBannerDisplay
      age="Terra.demographicsBanner.noDataProvided"
      applicationContent={null}
      className="selectable-demographics-banner"
      dateOfBirth="Terra.demographicsBanner.noDataProvided"
      dateOfBirthFullText="Terra.demographicsBanner.dateOfBirthFullText"
      dateOfBirthLabel="Terra.demographicsBanner.dateOfBirth"
      deceasedDate={null}
      deceasedDateLabel="Terra.demographicsBanner.deceased"
      gender="Terra.demographicsBanner.noDataProvided"
      gestationalAge={null}
      gestationalAgeFullText="Terra.demographicsBanner.gestationalAgeFullText"
      gestationalAgeLabel="Terra.demographicsBanner.gestationalAge"
      identifiers={Object {}}
      personName="Terra.demographicsBanner.noDataProvided"
      postMenstrualAge={null}
      postMenstrualAgeFullText="Terra.demographicsBanner.postMenstrualAgeFullText"
      postMenstrualAgeLabel="Terra.demographicsBanner.postMenstrualAge"
      preferredFirstName={null}
    />
  </SelectableTile>
  <div
    className="divider"
  />
  <button
    className="info-button"
    onClick={[MockFunction]}
    role="link"
    type="button"
  >
    Info
    <IconInformation
      viewBox="0 0 48 48"
      xmlns="http://www.w3.org/2000/svg"
    />
  </button>
</BackgroundTile>
`;

exports[`renders the banner wrapper with all props 1`] = `
<BackgroundTile
  isDeceased={false}
>
  <SelectableTile
    id="selectableDemographics"
    onClick={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
  >
    <DemographicsBannerDisplay
      age="25 Years"
      applicationContent={
        <span
          className="risk-score"
        >
          5%
        </span>
      }
      applicationRows={
        Array [
          Object {
            "Address": "1501 Walnut St. Apt #123",
            "City": "Kansas City MO",
          },
          Object {
            "ZIP": 64108,
          },
        ]
      }
      className="selectable-demographics-banner"
      dateOfBirth="May 9, 1993"
      dateOfBirthFullText="Terra.demographicsBanner.dateOfBirthFullText"
      dateOfBirthLabel="Terra.demographicsBanner.dateOfBirth"
      deceasedDate={null}
      deceasedDateLabel="Terra.demographicsBanner.deceased"
      gender="Male"
      gestationalAge="April 5, 2016"
      gestationalAgeFullText="Terra.demographicsBanner.gestationalAgeFullText"
      gestationalAgeLabel="Terra.demographicsBanner.gestationalAge"
      identifiers={
        Object {
          "MRN": 12343,
          "REA": "3JSDA",
        }
      }
      personName="Johnathon Doe"
      photo=""
      postMenstrualAge="April 7, 2016"
      postMenstrualAgeFullText="Terra.demographicsBanner.postMenstrualAgeFullText"
      postMenstrualAgeLabel="Terra.demographicsBanner.postMenstrualAge"
      preferredFirstName="John"
    />
  </SelectableTile>
  <div
    className="divider"
  />
  <button
    className="info-button"
    id="infoButton"
    onClick={
      [MockFunction] {
        "calls": Array [
          Array [],
        ],
        "results": Array [
          Object {
            "type": "return",
            "value": undefined,
          },
        ],
      }
    }
    role="link"
    type="button"
  >
    Info
    <IconInformation
      viewBox="0 0 48 48"
      xmlns="http://www.w3.org/2000/svg"
    />
  </button>
</BackgroundTile>
`;
